(fix) change the sigio handler of perf_test
It now supports output K samples, K is the sampling period given by the programmer.

Need to fix: there is a bug when read addresses out and build the memory region. This bug
is caused by reading the NULL void * value out and cast it to the uint64_t * then dereference
this NULL pointer.

--- a/perf_examples/Makefile
+++ b/perf_examples/Makefile
@@ -43,13 +43,13 @@ CFLAGS+= -I. -D_GNU_SOURCE -pthread
 
 PERF_EVENT_HDR=$(TOPDIR)/include/perfmon/pfmlib_perf_event.h
 
-LPC_UTILS=perf_util.o
-LPC_UTILS_HDR=perf_util.h
+LPC_UTILS=perf_util.o sample_parser.o linked_list.o
+LPC_UTILS_HDR=perf_util.h sample_parser.h linked_list.h
 
 TARGETS+=self self_basic self_count task task_attach_timeout syst \
 	notify_self notify_group task_smpl self_smpl_multi \
 	self_pipe syst_count task_cpu syst_smpl evt2raw \
-	branch_smpl
+	branch_smpl perf_test
 
 # Make rtop conditional on ncurses development package installed
 ifeq ($(shell /bin/echo -e '\#include <ncurses.h>\nint main(void) { return 0;}' | $(CC) -o /dev/null -xc - 2>/dev/null && echo -n yes), yes)
